--- a/progress.html
+++ b/progress.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>CodeForge++ | Progress</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
@@ -14,8 +14,13 @@
         <span class="logo-text">CodeForge++</span>
         <span class="logo-icon">{<></>}</span>
       </h1>
+      <div class="menu-toggle" id="menuToggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <nav>
-        <ul class="nav-menu">
+        <ul class="nav-menu" id="navMenu">
           <li><a href="index.html" class="nav-link">Home</a></li>
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
@@ -26,21 +31,20 @@
     </div>
   </header>
 
-  <main class="page-content">
-    <section class="progress-section fade-in">
+  <main class="page-content fade-in">
+    <section class="progress-section">
       <h2 class="section-title">Your Learning Journey</h2>
-      <p>Keep track of completed modules, lessons, and quizzes.</p>
+      <p>Monitor your progress across all lessons and quizzes.</p>
 
       <div class="progress-bar-container">
         <span id="progress-text" class="progress-label">
-          Progress: 0% (0/10 Exercises)
+          Progress: 0% (0/10 Lessons)
         </span>
         <div class="progress-bar glass">
           <div class="progress" style="--progress: 0%"></div>
         </div>
       </div>
 
-      <!-- Additional achievements or badges can be listed here -->
       <div id="achievements" style="margin-top:30px;"></div>
     </section>
   </main>
