update navigation to replace 'Resume' with 'Portfolio', enhance resource descriptions, and add Module 3 content

--- a/exercises.html
+++ b/exercises.html
@@ -25,7 +25,7 @@
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="resume.html" class="nav-link">Resume</a></li>
+          <!-- Resume link removed -->
         </ul>
       </nav>
     </div>
@@ -33,150 +33,48 @@
 
   <main class="page-content fade-in exercise-list">
     <h2 class="section-title">Advanced C++ Interview Syllabus</h2>
-    <p>Explore specialized modules, each with lessons, code challenges, and logic puzzles.</p>
+    <p>Select a module to see detailed lessons & hands-on exercises.</p>
 
-    <!-- Module 1 -->
     <div class="course-module glass">
       <h3>Module 1: Foundations & Modern Features</h3>
-      <p>Refresh essential C++ syntax, RAII, and modern C++ (C++11/14/17) best practices.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> RAII & Constructors
-          <a href="lesson.html?lessonID=M1L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> Smart Pointers & Move Semantics
-          <a href="lesson.html?lessonID=M1L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> Lambda Expressions & STL Algorithms
-          <a href="lesson.html?lessonID=M1L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>A refresher on modern C++ RAII, smart pointers, lambdas, etc.</p>
+      <a href="module1.html" class="btn lesson-btn">Go to Module 1</a>
     </div>
 
-    <!-- Module 2 -->
     <div class="course-module glass">
       <h3>Module 2: Data Structures & Algorithms</h3>
-      <p>Implement and optimize lists, trees, graphs; learn standard complexities and typical interview puzzles.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> Linked Lists & Iterators
-          <a href="lesson.html?lessonID=M2L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> Sorting & Searching (QuickSort, MergeSort, Binary Search)
-          <a href="lesson.html?lessonID=M2L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> Graphs & BFS/DFS
-          <a href="lesson.html?lessonID=M2L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 4:</strong> Common Algorithmic Puzzles (Two-Sum, Sliding Window)
-          <a href="lesson.html?lessonID=M2L4" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>Complexities, sorting, searching, and typical puzzle challenges.</p>
+      <a href="module2.html" class="btn lesson-btn">Go to Module 2</a>
     </div>
 
-    <!-- Module 3 -->
     <div class="course-module glass">
       <h3>Module 3: Real-Time & Embedded</h3>
-      <p>RTOS fundamentals, concurrency, interrupts, memory-mapped IO, and debugging tools for embedded systems.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> RTOS & Task Scheduling
-          <a href="lesson.html?lessonID=M3L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> ISRs & Concurrency in Embedded
-          <a href="lesson.html?lessonID=M3L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> Hardware Interaction (GPIO, SPI, I2C)
-          <a href="lesson.html?lessonID=M3L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>RTOS, concurrency, interrupts, hardware interaction.</p>
+      <a href="module3.html" class="btn lesson-btn">Go to Module 3</a>
     </div>
 
-    <!-- Module 4 -->
     <div class="course-module glass">
       <h3>Module 4: Concurrency & Multithreading</h3>
-      <p>Threads, mutexes, lock-free programming, advanced concurrency patterns.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> std::thread & std::mutex
-          <a href="lesson.html?lessonID=M4L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> Condition Variables & Futures
-          <a href="lesson.html?lessonID=M4L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> Lock-Free Data Structures
-          <a href="lesson.html?lessonID=M4L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>Threads, mutexes, lock-free data structures, advanced concurrency.</p>
+      <a href="module4.html" class="btn lesson-btn">Go to Module 4</a>
     </div>
 
-    <!-- Module 5 -->
     <div class="course-module glass">
       <h3>Module 5: Memory Management & Debugging</h3>
-      <p>Advanced memory allocation, custom allocators, valgrind, performance analysis, GDB usage.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> Manual vs. Smart Allocation
-          <a href="lesson.html?lessonID=M5L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> Custom Allocators & Pool Allocation
-          <a href="lesson.html?lessonID=M5L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> Valgrind & GDB Basics
-          <a href="lesson.html?lessonID=M5L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>Manual vs. smart pointers, custom allocators, valgrind, GDB.</p>
+      <a href="module5.html" class="btn lesson-btn">Go to Module 5</a>
     </div>
 
-    <!-- Module 6 -->
     <div class="course-module glass">
       <h3>Module 6: Templates & Metaprogramming</h3>
-      <p>Generic programming, SFINAE, type traits, advanced compile-time tricks.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> Function Templates & Class Templates
-          <a href="lesson.html?lessonID=M6L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> Template Specialization & Partial Specialization
-          <a href="lesson.html?lessonID=M6L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> SFINAE & Type Traits
-          <a href="lesson.html?lessonID=M6L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>SFINAE, type traits, advanced compile-time programming.</p>
+      <a href="module6.html" class="btn lesson-btn">Go to Module 6</a>
     </div>
 
-    <!-- Module 7 -->
     <div class="course-module glass">
       <h3>Module 7: System Design & Advanced Topics</h3>
-      <p>Large-scale architecture, design patterns, interview-style system scenarios, and more.</p>
-      <ul>
-        <li>
-          <strong>Lesson 1:</strong> Design Patterns (Factory, Singleton, Observer)
-          <a href="lesson.html?lessonID=M7L1" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 2:</strong> High-Level System Design in C++
-          <a href="lesson.html?lessonID=M7L2" class="btn lesson-btn">Open Lesson</a>
-        </li>
-        <li>
-          <strong>Lesson 3:</strong> Common Interview Scenarios (Producer/Consumer, Thread Pools)
-          <a href="lesson.html?lessonID=M7L3" class="btn lesson-btn">Open Lesson</a>
-        </li>
-      </ul>
+      <p>Design patterns, architecture, interview scenarios in C++.</p>
+      <a href="module7.html" class="btn lesson-btn">Go to Module 7</a>
     </div>
 
   </main>
