--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="logo-text">CodeForge++</span>
         <span class="logo-icon">{<></>}</span>
       </h1>
-      <!-- Hamburger icon -->
+      <!-- Hamburger -->
       <div class="menu-toggle" id="menuToggle">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -27,7 +27,7 @@
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="resume.html" class="nav-link">Resume</a></li>
+          <!-- Resume link REMOVED -->
         </ul>
       </nav>
     </div>
@@ -47,11 +47,11 @@
   <section class="features">
     <div class="feature-card glass card-hover floating-card">
       <h3>Robust Syllabus</h3>
-      <p>Learn advanced C++: concurrency, embedded, memory management, design patterns, and more.</p>
+      <p>Learn advanced C++: concurrency, embedded, memory management, and more.</p>
     </div>
     <div class="feature-card glass card-hover floating-card">
       <h3>In-Browser IDE</h3>
-      <p>Write, compile, and test C++ solutions without leaving your browser.</p>
+      <p>Write, compile, and test code right here—no external tools needed.</p>
     </div>
     <div class="feature-card glass card-hover floating-card">
       <h3>Progress & Quizzes</h3>
