--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="resume.html" class="nav-link">Resume</a></li>
+          <!-- Resume link removed from nav -->
         </ul>
       </nav>
     </div>
@@ -35,8 +35,8 @@
     <section class="portfolio-section">
       <h2 class="section-title">Meet the Developer</h2>
       <p>
-        Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform is my advanced learning 
-        and portfolio demonstration, bridging real-time embedded topics with modern C++.
+        Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform is my advanced
+        learning and portfolio demonstration, bridging real-time embedded topics with modern C++.
       </p>
 
       <div class="portfolio-highlights">
@@ -59,11 +59,30 @@
         <div class="highlight-card glass card-hover floating-card">
           <h3>Project Goals</h3>
           <ul>
-            <li>Provide advanced learning modules for interviews</li>
-            <li>Include in-browser IDE & solution checking</li>
-            <li>Serve as a portfolio of high-end solutions</li>
+            <li>Advanced learning modules for interviews</li>
+            <li>In-browser IDE & solution checking</li>
+            <li>Showcase my professional experience & portfolio</li>
           </ul>
         </div>
+      </div>
+
+      <!-- Link to Resume -->
+      <div class="glass" style="margin-top:40px; text-align:center;">
+        <p>Interested in my professional background? 
+          <a href="resume.html" class="btn">View My Resume</a>
+        </p>
+      </div>
+
+      <!-- GitHub & LinkedIn Icons/Buttons -->
+      <div class="glass" style="margin-top:20px; padding:20px; text-align:center;">
+        <h3>Connect with me</h3>
+        <a href="https://github.com/ohadonmicrosoft" target="_blank" class="btn" style="margin-right:10px;">
+          <!-- Simple text or an icon -->
+          GitHub
+        </a>
+        <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="btn" style="margin-left:10px;">
+          LinkedIn
+        </a>
       </div>
     </section>
   </main>
