--- a/quiz.html
+++ b/quiz.html
@@ -25,14 +25,14 @@
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="resume.html" class="nav-link">Resume</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="page-content">
-    <section class="fade-in">
+  <main class="page-content fade-in">
+    <section>
       <h2 class="section-title">Interview Quiz</h2>
       <p id="quiz-intro">Lesson-based quiz questions will appear here.</p>
 
