--- a/progress.html
+++ b/progress.html
@@ -25,7 +25,7 @@
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="resume.html" class="nav-link">Resume</a></li>
+          <!-- Resume removed -->
         </ul>
       </nav>
     </div>
@@ -34,11 +34,11 @@
   <main class="page-content fade-in">
     <section class="progress-section">
       <h2 class="section-title">Your Learning Journey</h2>
-      <p>Monitor your progress across all lessons and quizzes.</p>
+      <p>Monitor your progress across modules and quizzes.</p>
 
       <div class="progress-bar-container">
         <span id="progress-text" class="progress-label">
-          Progress: 0% (0/10 Lessons)
+          Progress: 0% (0/20 Lessons)
         </span>
         <div class="progress-bar glass">
           <div class="progress" style="--progress: 0%"></div>
