--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
           <li><a href="exercises.html" class="nav-link">Exercises</a></li>
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="resume.html" class="nav-link">Resume</a></li>
+          <!-- Resume removed -->
         </ul>
       </nav>
     </div>
@@ -53,7 +53,7 @@
 
         <div class="resource-item glass card-hover floating-card">
           <h3>Learn C++</h3>
-          <p>A helpful site with beginner-to-advanced tutorials on modern C++ concepts.</p>
+          <p>A helpful site with advanced tutorials on modern C++ concepts.</p>
           <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
         </div>
       </div>
